# dummy

./: .gitignore  CMakeLists.txt
kd/: CMakeLists.txt  PyClass.cpp  PyClass.h  class.cpp  class.h  lib.pyx  main.cpp  main.py  setup.py
src/: main.py  setup.py
src/booking/: __init__.py  __init__.pyx  book.pyx  booking.cpp  booking.h  py_booking.cpp  py_booking.h
src/py_strategies/: allot_mid.py
src/strategies/: allot_first.cpp  allot_first.h  allot_last.cpp  allot_last.h  strategies.pyx
